k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: togather
  labels:
    name: togather
